--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Shohre & Mehran</title>
-    <link href="./css/style.css" rel="stylesheet" type="text/css" media="screen" />
-    <script src="./js/countup_timer.js"></script>
+    <link href="style.css" rel="stylesheet" type="text/css" media="screen" />
+    <script src="countup_timer.js"></script>
 </head>
 <body>
   <div class="timerView">
