--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ja">
+<html lang="fa">
 <head>
     <meta charset="UTF-8">
     <title>Shohre & Mehran</title>
@@ -10,7 +10,7 @@
   <div class="timerView">
       <p>گر کسی گوید که بهر عشق بحر دل چرا شوریده و شیدا شود؟
 تو جوابش ده که: اندر شوق بحر قطره بی آرام و ناپروا شود</p>
-      <p id="timer" class="time"></p>
+      <p id="timer" class="time">0:0:0</p>
       <p>If my request is accepted by Shohre♥️, this timer will start and will record the days, hours and seconds of our relationship.</p>
   </div>
   <script>
@@ -18,12 +18,12 @@
           nowTimes = date.getHours() + ':' + date.getMinutes() + ':' + date.getSeconds(),
           timeElem = document.getElementById('timer');
 
-      new CountUpTimer("0:0:0", function(times, prams) {
+      /*new CountUpTimer("0:0:0", function(times, prams) {
           timeElem.innerText = times;
           if(prams.isNextDay) {
               location.reload();
           }
-      });
+      });*/
   </script>
 </body>
 </html>
