--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <p>گر کسی گوید که بهر عشق بحر دل چرا شوریده و شیدا شود؟
 تو جوابش ده که: اندر شوق بحر قطره بی آرام و ناپروا شود</p>
       <p id="timer" class="time">0:0:0</p>
-      <p>If my request is accepted by Shohre♥️, this timer will start and will record the days, hours and seconds of our relationship.</p>
+      <p>اگر درخواست من توسط شهره قبول بشه این تایمر آغاز میشه و روز ها و ساعت ها و ثانیه های رابطه های ما رو ثبت خواهد کرد</p>
   </div>
   <script>
       var date = new Date(),
