--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <script src="countup_timer.js"></script>
 </head>
 <body>
-  <div class="timerView">
+  <div style="flex-direction: column;" class="timerView">
       <p>گر کسی گوید که بهر عشق بحر دل چرا شوریده و شیدا شود؟
 تو جوابش ده که: اندر شوق بحر قطره بی آرام و ناپروا شود</p>
-      <p id="timer" class="time">0:0:0</p>
+      <br>
+      <p id="timer" class="time">00:00:00</p>
+      <br>
       <p>اگر درخواست من توسط شهره قبول بشه این تایمر آغاز میشه و روز ها و ساعت ها و ثانیه های رابطه های ما رو ثبت خواهد کرد</p>
   </div>
   <script>
@@ -25,5 +27,8 @@
           }
       });*/
   </script>
+    <footer>
+        ساخته شده با قلب توسط مهران 
+    </footer>
 </body>
 </html>
