--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Shohre & Mehran</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@100..900&display=swap" rel="stylesheet">
     <link href="style.css" rel="stylesheet" type="text/css" media="screen" />
     <script src="countup_timer.js"></script>
 </head>
-<body>
+<body style="font-family: Vazirmatn;">
   <div style="flex-direction: column;" class="timerView">
-      <p>گر کسی گوید که بهر عشق بحر دل چرا شوریده و شیدا شود؟
-تو جوابش ده که: اندر شوق بحر قطره بی آرام و ناپروا شود</p>
+      <h5>گر کسی گوید که بهر عشق بحر دل چرا شوریده و شیدا شود؟
+تو جوابش ده که: اندر شوق بحر قطره بی آرام و ناپروا شود</h5>
       <br>
       <p id="timer" class="time">00:00:00</p>
       <br>
