--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 </head>
 <body style="font-family: Vazirmatn;">
   <div style="flex-direction: column;" class="timerView">
-      <h5>گر کسی گوید که بهر عشق بحر دل چرا شوریده و شیدا شود؟
-تو جوابش ده که: اندر شوق بحر قطره بی آرام و ناپروا شود</h5>
+      <h3>گر کسی گوید که بهر عشق بحر دل چرا شوریده و شیدا شود؟
+تو جوابش ده که: اندر شوق بحر قطره بی آرام و ناپروا شود</h3>
       <br>
       <p id="timer" class="time">00:00:00</p>
       <br>
-      <p>اگر درخواست من توسط شهره قبول بشه این تایمر آغاز میشه و روز ها و ساعت ها و ثانیه های رابطه های ما رو ثبت خواهد کرد</p>
+      <h2>اگر درخواست من توسط شهره قبول بشه این تایمر آغاز میشه و روز ها و ساعت ها و ثانیه های رابطه های ما رو ثبت خواهد کرد</h2>
   </div>
   <script>
       var date = new Date(),
@@ -31,7 +31,7 @@
       });*/
   </script>
     <footer>
-        ساخته شده با قلب توسط مهران 
+    <h5>ساخته شده با قلب توسط مهران</h5>
     </footer>
 </body>
 </html>
