--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <br>
       <p id="timer" class="time">00:00:00</p>
       <br>
-      <h2>اگر درخواست من توسط شهره قبول بشه این تایمر آغاز میشه و روز ها و ساعت ها و ثانیه های رابطه های ما رو ثبت خواهد کرد</h2>
+      <p><b>اگر درخواست من توسط شهره قبول بشه این تایمر آغاز میشه و روز ها و ساعت ها و ثانیه های رابطه های ما رو ثبت خواهد کرد</b></p>
   </div>
   <script>
       var date = new Date(),
